--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,9 @@ html
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     )
-  body
+  body(
+      class="cyan lighten-4"
+  )
     h1= 'Welcome to Kenziegram!'
         form(
             id="form"
@@ -19,7 +21,7 @@ html
                 div(
                     class="btn grey"
                 )
-                    span= 'File'
+                    span= 'Photo'
                     input(
                         id="image-input"
                         name="myImage"
@@ -37,12 +39,11 @@ html
                 type="submit"
                 class="btn"
             )= "Submit"
-        br
-        br
 
     each photo in photos
         a(href=`http://localhost:3000/photos/${photo}`)
             img(
                 src=`./uploads/${photo}`
                 class="responsive-img"
+                style="margin-bottom: 20px; border: 5px solid black;"
             )
