adds clearInterval after two failed attempts to update photos

--- a/views/commentSubmit.pug
+++ b/views/commentSubmit.pug
@@ -9,7 +9,7 @@ html
       class="cyan lighten-4"
   )
     a(
-        href=`http://localhost:3000/photos/${photo}`
+        href=`/photos/${photo}`
         class="btn grey"
     )= 'Back'
     h1(
