adds register and sign in buttons that render pug files

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,16 @@ html
   body(
       class="cyan lighten-4"
   )
+    a(
+            id="sign"
+            class="btn"
+            href="/signin"
+        )= "Sign In" 
+    a(
+            id="register"
+            class="btn"
+            href="/register"
+        )= "Register"
     h1(
         style="font-size:7vw;"
         class="card-panel flow-text"
