--- a/views/photo.pug
+++ b/views/photo.pug
@@ -38,14 +38,9 @@ html
                 br
     form(
         id="form"
-        action="/comments"
+        action=`/comments/${photo}`
         method="POST"
     )
-        input(
-            style="display: none;"
-            name="photo"
-            value= photo
-        )
         icon(
             class="message material-icons prefix"
         )
